--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build",
-    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --port 1234"
+    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --port 1234 --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "css-loader": "^0.28.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-route": "^1.0.3",
+    "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1"
   },
   "devDependencies": {
